--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://haohailong.github.io
-title: {H_2} 生命之氢
+title: 生命之氢
 subtitle: 郝海龙的第二重人格。
 author: 郝海龙
 simple_search: https://www.google.com/search
