the second available one

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://haohailong.github.io
 title: 生命之氢
-subtitle: 郝海龙的第二重人格。
+subtitle: Another side of Hailong Hao.
 author: 郝海龙
 simple_search: https://www.google.com/search
 description:
