--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://haohailong.github.io
+url: http://shengmingzhiqing.com
 title: 生命之氢
 subtitle: Another side of Hailong Hao.
 author: 郝海龙
