--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,7 @@ markdown: kramdown
 #     - footnotes
 #     - smart
 pygments: false # default python pygments have been replaced by pygments.rb
+category_title_prefix: "分类：" # 修改分类前缀
 
 paginate: 10          # Posts per page on the blog index
 pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
