--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://shengmingzhiqing.com
 title: 生命之氢
-subtitle: Another side of Hailong Hao.
+subtitle: Hailong Hao's Laboratory
 author: 郝海龙
 simple_search: https://www.google.com/search
 description:
