--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,9 @@ kramdown:
 #     - autolink
 #     - footnotes
 #     - smart
-pygments: false # default python pygments have been replaced by pygments.rb
+pygments: true # default python pygments have been replaced by pygments.rb
 category_title_prefix: "分类：" # 修改分类前缀
+excerpt_separator: N/A-------N/A... Workaround for https://github.com/mojombo/jekyll/issues/1401
 
 paginate: 10          # Posts per page on the blog index
 pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
