--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,8 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: haohailong
+github_repo: haohailong.github.io
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
