add site description

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: 生命之氢
 subtitle: Hailong Hao's Laboratory
 author: 郝海龙
 simple_search: https://www.google.com/search
-description:
+description: 郝海龙的偏理工博客，生命之氢。博客名来自 Hailong Hao 的缩写以及米兰·昆德拉的小说。
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
