--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ date_format: "%Y年%-m月%e日"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
 subscribe_rss: /atom.xml
-subscribe_email: haohailong@gmail.com
+subscribe_email: 
 # RSS feeds can list your email address if you like
 email: haohailong@gmail.com
 
