调整日期格式

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: 郝海龙的偏理工博客，生命之氢。博客名来自 Hailon
 # You can customize the format as defined in
 # http://www.ruby-doc.org/core-1.9.2/Time.html#method-i-strftime
 # Additionally, %o will give you the ordinal representation of the day
-date_format: "%Y年%-m月%e日"
+date_format: "%Y年%-m月%-d日"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
 subscribe_rss: /atom.xml
